--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  margin: 0 auto;
 }
 
 ul {
@@ -47,9 +48,11 @@ ul {
 
 .container {
   padding: 24px 0 24px;
-  width: 1158px;
+  /* width: 1158px; */
+  width: 100%;
   margin: 0 auto;
-  padding: 0 15px;
+  /* padding: 0 15px; */
+  padding: 0 28px;
 }
 
 /*header*/
@@ -222,11 +225,14 @@ ul {
 
 .benefits-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  /* gap: 24px; */
+  gap: 72px;
 }
 
 .benefits-li {
-  flex-basis: calc((100% - 3 * 24px) / 4);
+  /* flex-basis: calc((100% - 3 * 24px) / 4); */
+  flex-basis: 100%;
 }
 
 .benefits-icon {
@@ -242,11 +248,12 @@ ul {
 
 .benefits-subtitle {
   color: var(--c-background-hero);
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 36px;
+  font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .benefits-text {
@@ -272,12 +279,16 @@ ul {
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  /* gap: 24px; */
+  gap: 72px;
 }
 
 .team-li {
   background-color: #fff;
-  flex-basis: calc((100% - 3 * 24px) / 4);
+
+  /* flex-basis: calc((100% - 3 * 24px) / 4); */
+  flex-basis: 100%;
   border-radius: 0px 0px 4px 4px;
   width: calc((100% - 72px) / 4);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -286,6 +297,7 @@ ul {
 
 .team-card {
   padding: 32px 0;
+  margin: 0 auto;
 }
 
 .team-name {
@@ -355,12 +367,13 @@ ul {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
+  /* column-gap: 24px; */
   row-gap: 48px;
 }
 
 .portfolio-li {
-  flex-basis: calc((100% - 48px) / 3);
+  /* flex-basis: calc((100% - 48px) / 3); */
+  flex-basis: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -373,6 +386,7 @@ ul {
 .portfolio-image {
   position: relative;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 .portfolio-about {
@@ -421,14 +435,16 @@ ul {
 
 .footer-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
+  justify-content: center;
 }
 
 .footer-box {
-  margin-right: 120px;
+  /* margin-right: 120px; */
 }
 .footer-logo {
-  display: inline-block;
+  display: block;
   color: var(--c-brand);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -438,6 +454,7 @@ ul {
   text-transform: uppercase;
   text-decoration: none;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .footer-logo .accent-footer {
@@ -462,6 +479,8 @@ ul {
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+  text-align: center;
+  padding-top: 72px;
 }
 .footer-list-social {
   display: flex;
@@ -496,12 +515,15 @@ ul {
 .subscribe {
   width: 570px;
   height: 86px;
-  margin-left: 93px;
+  /* margin-left: 93px; */
 }
 .subscribe-form {
   gap: 24px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  flex-direction: column;
+  justify-items: center;
 }
 
 .subscribe-input {
