--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ ul {
 .container {
   padding: 24px 0 24px;
   /* width: 1158px; */
+  max-width: 320px;
   width: 100%;
   margin: 0 auto;
   /* padding: 0 15px; */
@@ -286,6 +287,7 @@ ul {
 
 .team-li {
   background-color: #fff;
+  max-width: 264px;
 
   /* flex-basis: calc((100% - 3 * 24px) / 4); */
   flex-basis: 100%;
