--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,9 @@ ul {
   width: 100%;
   margin: 0 auto;
   /* padding: 0 15px; */
-  padding: 0 28px;
+  padding: 0 16px;
+  /* outline: 2px solid red;
+  outline-offset: -2px; */
 }
 
 /*header*/
@@ -147,7 +149,23 @@ ul {
 .contacts-link:hover,
 .contacts-link:focus {
   color: var(--c-hover);
+
   cursor: pointer;
+}
+
+.mob-menu {
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  margin-left: auto;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.menu-icon {
 }
 
 /*hero section*/
@@ -516,7 +534,7 @@ ul {
 }
 .subscribe {
   width: 570px;
-  height: 86px;
+
   /* margin-left: 93px; */
 }
 .subscribe-form {
@@ -593,11 +611,11 @@ input::placeholder {
   visibility: visible;
   pointer-events: auto;
 }
-/*.is-hidden {
+.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-}*/
+}
 
 .modal {
   position: absolute;
@@ -781,4 +799,98 @@ input::placeholder {
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: auto;
+}
+
+/*Mobile menu*/
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 72px 16px 40px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+
+  transform: translateX(100%);
+  transition: 300ms ease-in;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+.mobile-menu-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  min-width: 24px;
+  min-height: 24px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #2e2f42;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+}
+
+.mobile-menu-list {
+  display: inline;
+  margin-bottom: auto;
+}
+
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mobile-menu-link {
+  font-size: 36px;
+  font-weight: 700;
+  color: var(--c-background-hero);
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+
+.mobile-menu-link.current {
+  color: var(--c-hover);
+}
+
+.mobile-contacts {
+  display: inline;
+  margin-bottom: 40px;
+}
+
+.mobile-contacts-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+.mobile-contacts-link {
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--c-background-hero);
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.mobile-contacts-link.accent {
+  color: var(--c-hover);
+}
+.mobile-social {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+.mobile-social-link {
+  width: 40px;
+  height: 40px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--c-brand);
+  border-radius: 50%;
+}
+
+.mobile-social-icon {
+  fill: #fff;
 }
