--- a/css/media.css
+++ b/css/media.css
@@ -36,11 +36,16 @@
 @media only screen and (max-width: 767.98px) {
   .header-list {
     display: none;
+    gap: 0;
+    flex-wrap: wrap;
+    justify-content: flex-end;
   }
+
   .ul-address {
     display: none;
   }
 }
+
 @media only screen and (min-width: 768px) {
   .hero-section {
     max-width: 768px;
@@ -49,6 +54,22 @@
         rgba(46, 47, 66, 0.7)
       ),
       url(../images/hero_tab.jpg);
+  }
+
+  .footer-box {
+    margin-right: 24px;
+    margin-bottom: 72px;
+  }
+
+  .subscribe .footer-head {
+    text-align: left;
+  }
+
+  .subscribe-form {
+    gap: 24px;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
   }
 }
 
@@ -94,6 +115,14 @@
 
   .portfolio-li {
     flex-basis: calc((100% - 24px) / 2);
+  }
+
+  .footer-container {
+    padding-left: 108px;
+  }
+
+  .footer-head {
+    padding-top: 0;
   }
 }
 
