--- a/css/styles.css
+++ b/css/styles.css
@@ -47,15 +47,10 @@ ul {
 }
 
 .container {
-  padding: 24px 0 24px;
-  /* width: 1158px; */
   max-width: 320px;
   width: 100%;
   margin: 0 auto;
-  /* padding: 0 15px; */
   padding: 0 16px;
-  /* outline: 2px solid red;
-  outline-offset: -2px; */
 }
 
 /*header*/
@@ -70,12 +65,14 @@ ul {
   display: flex;
   justify-content: space-between;
 }
+
 .header-list {
   display: flex;
   gap: 40px;
   flex-grow: 1;
   line-height: 1.5em;
   letter-spacing: 0.02em;
+  align-items: center;
 }
 .header-link {
   display: inline-block;
@@ -135,9 +132,32 @@ ul {
   font-style: normal;
   padding: 24px 0;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .address {
+    padding: 16px 0;
+  }
+}
+
 .ul-address {
   display: flex;
   gap: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .ul-address {
+    flex-direction: column;
+    gap: 12px;
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .ul-address {
+    flex-direction: row;
+    gap: 40px;
+    font-size: 16px;
+  }
 }
 .contacts-link {
   font-weight: 400;
@@ -167,23 +187,79 @@ ul {
 
 /*hero section*/
 .hero-section {
+  max-width: 320px;
   background-color: var(--c-background-hero);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 188px 0;
+  padding: 72px 0;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero_mob.jpg);
-  max-width: 1440px;
+    url("../images/hero_mob.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   margin: auto;
 }
 
+@media only screen and (min-resolution: 192dpi) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero_mob@2x.jpg");
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-section {
+    max-width: 768px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero_tab.jpg");
+    padding: 112px 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero_tab@2x.jpg");
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .hero-section {
+    max-width: 1158px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero_desk.jpg");
+  }
+}
+
+@media only screen and (min-width: 1158px) and (min-resolution: 192dpi) {
+  .hero-section {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero_desk@2x.jpg");
+  }
+}
+
 .hero-title {
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.12;
   letter-spacing: 0.02em;
   color: #fff;
   font-weight: 700;
@@ -191,9 +267,17 @@ ul {
   max-width: 496px;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 30px;
+  margin-bottom: 96px;
+  text-transform: capitalize;
 }
-
+@media only screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.07;
+    margin-bottom: 36px;
+  }
+}
 .button-hero {
   display: block;
   font-family: "Roboto", sans-serif;
@@ -271,8 +355,15 @@ ul {
   margin-bottom: 8px;
   text-align: center;
 }
+@media only screen and (min-width: 768px) {
+  .benefits-subtitle {
+    text-align: start;
+  }
+}
 
 .benefits-text {
+  font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -280,7 +371,7 @@ ul {
 /*Our Team section*/
 .team-section {
   background-color: var(--c-background-secondary);
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .team-title {
@@ -444,6 +535,24 @@ ul {
   letter-spacing: 0.02em;
 }
 
+.portfolio-picture {
+  width: 288px;
+  height: 280px;
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio-picture {
+    width: 356px;
+    height: 300px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .portfolio-picture {
+    width: 360px;
+    height: 300px;
+  }
+}
 /*footer*/
 .footer {
   background-color: var(--c-background-hero);
@@ -451,6 +560,7 @@ ul {
 }
 
 .footer-container {
+  max-width: 320px;
   display: flex;
   flex-wrap: wrap;
   align-items: baseline;
@@ -532,16 +642,14 @@ ul {
   /* margin-left: 93px; */
 }
 .subscribe-form {
-  gap: 24px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  flex-direction: column;
   justify-items: center;
+  gap: 16px;
 }
 
 .subscribe-input {
-  display: block;
   width: 264px;
   height: 40px;
   color: #ffffff;
@@ -555,10 +663,16 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.04em;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 input::placeholder {
   color: #ffffff;
+}
+@media screen and (min-width: 1158px) {
+  .subscribe-input {
+    opacity: 1;
+  }
 }
 
 .buttom-subscribe {
@@ -567,7 +681,6 @@ input::placeholder {
   align-items: center;
   min-width: 165px;
   height: 40px;
-  padding: 10px 28px;
   text-align: center;
   font-weight: 500;
   line-height: 1.5;
@@ -577,6 +690,9 @@ input::placeholder {
   border: none;
   border-radius: 4px;
   background-color: var(--c-brand);
+}
+.buttom-subscribe:hover {
+  background-color: var(--c-hover);
 }
 
 .subscribe-icon {
